--- a/package.json
+++ b/package.json
@@ -18,5 +18,18 @@
   "bugs": {
     "url": "https://github.com/Blobby19/StayOnBudget/issues"
   },
-  "homepage": "https://github.com/Blobby19/StayOnBudget#readme"
+  "homepage": "https://github.com/Blobby19/StayOnBudget#readme",
+  "devDependencies": {
+    "bunyan": "^1.8.1",
+    "morgan": "^1.7.0"
+  },
+  "dependencies": {
+    "body-parser": "^1.15.2",
+    "express": "^4.14.0",
+    "express-session": "^1.14.1",
+    "method-override": "^2.3.6",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
+    "passport-oauth2": "^1.3.0"
+  }
 }
