--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "express-session": "^1.14.1",
     "method-override": "^2.3.6",
     "passport": "^0.3.2",
-    "passport-local": "^1.0.0",
-    "passport-oauth2": "^1.3.0"
+    "passport-localapikey-update": "^0.5.0"
   }
 }
